<resources>
    <string name="app_name">UserListTest</string>

    <string name="user_list">User List</string>
    <string name="name">Name</string>
    <string name="number">Number</string>
    <string name="add_user">Add User</string>
    <string name="name_lbl">Name:</string>
    <string name="number_lbl">Number:</string>

    <!--Message-->
    <string name="msg_enter_name">Enter name</string>
    <string name="msg_enter_number">Enter number</string>
    <string name="error_no_user_available">No user available</string>
    <string name="msg_user_added_success">User added successfully</string>
    <string name="msg_user_available">User already available</string>
</resources>